# NotSoFastWorking_engine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
ECS/Components/: PanningCamera.h  TransformComponent.h  ZoomingCamera.h
ECS/Systems/: CameraSystem.h  DrawableSystem.h  PanningSystem.h  PhysicsSystem.h  ZoomingSystem.h
ECS/include/: Component.h  ComponentArray.h  ComponentManager.h  CoreComponents.h  Entity.h  EntityManager.h  GameObject.h  System.h  SystemManager.h
ECS/src/: EntityManager.cpp
Engine/include/: Engine.h  Event.h  EventTranslator.h  InputEvents.h  Layer.h  Level.h  WindowEvents.h
Engine/src/: Engine.cpp  Level.cpp
Examples/: FollowingCamera.h
Render/include/: Camera.h  Renderer.h  TextureManager.h
Render/src/: Camera.cpp  Renderer.cpp  TextureManager.cpp
Renderer/include/: Camera.h
Renderer/src/: Camera.cpp
Tests/: UtilsTest.cpp
Utils/include/: QuadTree.h  Rectangle.h  Vector.h  Vector.hpp
Utils/src/: Rectangle.cpp  Vector.cpp
